# aws_agent_core

./: .env.example  .gitignore  AGENTS.md  README.md  agentic_rag_design.md
.claude/: launch.json
agentcore/: agentcore.json  aws-targets.example.json
agentcore/cdk/: README.md
app/GridAgentCore/: local_chat.py  main.py  pyproject.toml
app/GridAgentCore/colqwen2_service/: Dockerfile  entrypoint.sh  requirements.txt  serve.py
app/GridAgentCore/frontend/: index.html  package-lock.json  package.json  vite.config.js
app/GridAgentCore/frontend/src/: App.test.jsx  main.jsx  styles.css
app/GridAgentCore/grid_agent_core/: __init__.py  agent.py  application_form.py  artifacts.py  build_indexes.py  colivara.py  colqwen2.py  corpus.py  indexes.py  intake.py  intake_gmail.py  intake_store.py  llama_parse_agentic.py  local_api.py  models.py  multimodal_enrichment.py  progress.py  requirements_schema.py  retrieval.py  review_api.py  settings.py  upload_artifacts.py
app/GridAgentCore/grid_agent_core/graphrag/: __init__.py  canonical_chunks.py  graphrag_ms_worker.py  index_meta.py  rag_common.py  span_resolver.py  worker_lib.py  worker_protocol.py
app/GridAgentCore/grid_agent_core/rag_compat/: grid_llm.py  pageindex_rag.py
app/GridAgentCore/grid_agent_core/rag_compat/official_pageindex/: loader.py  rag.py
app/GridAgentCore/review_seed/: generate_seed.py  seed_data.py
app/GridAgentCore/test_ui/: index.html
app/SimpleAgentCore/: chatbot.py  local_chat.py  main.py  pyproject.toml
app/review_frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/review_frontend/.claude/: launch.json
app/review_frontend/src/: App.tsx  api.ts  store.tsx  styles.css  types.ts
app/review_frontend/src/components/: AgentConsole.tsx  Citations.tsx  CopilotTab.tsx  DocumentsTab.tsx  Markdown.tsx  RunStatusLine.tsx  SectionReviewCard.tsx  TopBar.tsx  TraceList.tsx  bits.tsx
app/review_frontend/src/lib/: ndjson.ts
app/review_frontend/src/pages/: Dashboard.tsx  IntakePage.tsx  ProjectPage.tsx
docs/: bff_terraform_explainer.html  golden_eval_report.md  golden_eval_scores.json  golden_set.md  grid_agents.md  simple_agent_core.md
docs/superpowers/plans/: 2026-06-13-email-application-intake.md
docs/superpowers/specs/: 2026-06-09-graphrag-msgraphrag-design.md  2026-06-13-email-application-intake-design.md
infra/bff/: .gitignore  README.md  main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
infra/colqwen2_sagemaker/: README.md  main.tf  outputs.tf  variables.tf
multimodal_rag_research/: README.md  index.html
scripts/: build_colqwen2_index.py  build_colqwen2_visual_retriever.py  build_golden_set.py  deploy_colqwen2_sagemaker.py  deploy_grid_agentcore.py  eval_golden_set.py  parse_new_grid_docs.py
smoke_artifacts/llamaparse-after/: artifact_revision.txt  manifest.jsonl  parse_metadata.json
smoke_artifacts/llamaparse-after/corpus/grid/: 02-industry-codes-00-the-full-grid-code.txt
smoke_artifacts/llamaparse-after/parse_resume_cache/llamaparse_agentic/grid/: 02-industry-codes-00-the-full-grid-code.raw.json  02-industry-codes-00-the-full-grid-code.record.json
smoke_artifacts/llamaparse-after/parse_resume_cache/llamaparse_agentic/grid/02-industry-codes-00-the-full-grid-code.partition_cache/: pages-262-264.raw.json
smoke_artifacts/llamaparse-after/parse_resume_cache/llamaparse_agentic/grid/02-industry-codes-00-the-full-grid-code.visual_cache/: page-0262.visual.json  page-0263.visual.json  page-0264.visual.json
smoke_artifacts/llamaparse-before/: artifact_revision.txt  manifest.jsonl  parse_metadata.json  source_document_metadata.json
smoke_artifacts/llamaparse-before/corpus/grid/: 02-industry-codes-00-the-full-grid-code.txt
smoke_artifacts/llamaparse-before/parse_resume_cache/llamaparse_agentic/grid/: 02-industry-codes-00-the-full-grid-code.raw.json  02-industry-codes-00-the-full-grid-code.record.json
smoke_artifacts/llamaparse-before/parse_resume_cache/llamaparse_agentic/grid/02-industry-codes-00-the-full-grid-code.partition_cache/: pages-262-264.raw.json
tests/: test_chatbot.py
tests/grid_agent_core/: conftest.py  test_agent.py  test_application_form.py  test_artifacts.py  test_corpus.py  test_indexes.py  test_intake.py  test_intake_api.py  test_intake_gmail.py  test_intake_store.py  test_local_api.py  test_requirements_schema.py  test_retrieval.py
