[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-agent-core"
version = "0.1.0"
description = "AWS Bedrock AgentCore Grid document agent using Claude Agent SDK."
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=1.12.0,<2",
    "boto3>=1.34,<2",
    "claude-agent-sdk>=0.2.87,<0.3",
    "numpy>=1.26,<3",
    "python-dotenv>=1.0.1,<2",
    "tqdm>=4.66,<5",
    "voyageai>=0.3.7,<1",
    # GraphRAG (Microsoft) for the graphrag_ms retrieval method. Pinned <3 (worker targets
    # the 2.x API). Scoped to Python 3.13 only: the deployed runtime is built on 3.13 (so
    # CodeZip installs it) and the local worker venv is 3.13; the main local env is 3.14,
    # where graphrag's spacy has no cp314 wheels, so it is correctly skipped there.
    "graphrag>=2.7,<3; python_full_version >= '3.13' and python_full_version < '3.14'",
]

[project.optional-dependencies]
build = [
    "anthropic>=0.64.0,<1",
    "fastapi>=0.115,<1",
    "llama-cloud>=1.4.1,<2",
    "pandas>=2.2,<3",
    "pillow>=10,<13",
    "pyarrow>=16,<23",
    "pymupdf>=1.24,<2",
    "pysbd>=0.3.4,<0.4",
    "pypdf>=4,<7",
    "uvicorn[standard]>=0.34,<1",
]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.0,<9",
]

[project.scripts]
grid-parse-documents = "grid_agent_core.corpus:main"
grid-build-indexes = "grid_agent_core.build_indexes:main"
grid-build-colqwen2-index = "grid_agent_core.colqwen2:main"
grid-upload-artifacts = "grid_agent_core.upload_artifacts:main"
grid-local-api = "grid_agent_core.local_api:main"

[tool.setuptools]
packages = [
    "grid_agent_core",
    "grid_agent_core.graphrag",
    "grid_agent_core.rag_compat",
    "grid_agent_core.rag_compat.official_pageindex",
]
py-modules = ["main", "local_chat"]

[tool.pytest.ini_options]
testpaths = ["../../tests/grid_agent_core"]
pythonpath = ["."]
